<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cafe_env</name>
  <version>0.1.0</version>
  <description>
    Custom Gazebo simulation environment for TurtleBot3 in a cafe setting
  </description>
  <maintainer email="joe844670@gmail.com">JoshHuang</maintainer>
  <license>Apache-2.0</license>

  <!-- Build and runtime dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>gazebo_ros</depend> <!-- Simplified from gazebo_ros_pkgs -->

  <!-- Export for Gazebo model path -->
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>